--- a/1/Practice.html
+++ b/1/Practice.html
@@ -71,12 +71,14 @@
             <input type="radio" name="emaillist" id="emaillist" value="addme">
             <label for="emaillist">Add me to your email list</label>
         </form><br>
+        <input id="" name="send_to" type="hidden" value="">
         <button type="button">Submit</button>
         </fieldset>
       </section>
       <aside>
         <fieldset>
-        <legend>Our Location</legend>
+        <h3>Our Location</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3112.1731729963844!2d-9.131996684402642!3d38.73678816399983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193479d0af097d%3A0xac0c1f4d67894d63!2sEDIT.%20-%20Disruptive%20Digital%20Education!5e0!3m2!1spt-PT!2spt!4v1679339776524!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <address>
           EDIT. - Disruptive Digital Education &middot; Alameda D.Afonso
           Henriques, 7A &middot; 1900-178, Lisboa
